feat(checkout): add saga orchestrator with stock reservation and compensation